--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/jazzy/gz_tools_vendor
-	previous = 
-	base = 88ec83d
+	previous = 88ec83d
+	base = a36c337
 	trim = 
 	trimbase = 
