--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/jazzy/gz_tools_vendor
-	previous = 
-	base = 24c98f5
+	previous = 24c98f5
+	base = ee8bb90
 	trim = 
 	trimbase = 
