Store releaser history

--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.0.5-1": ["Thu Dec 19 2024", "Addisu Z. Taddese", "addisuzt@intrinsic.ai"]}
+{"0.0.6-1": ["Thu Mar 06 2025", "Addisu Z. Taddese", "addisuzt@intrinsic.ai"], "0.0.5-1": ["Thu Dec 19 2024", "Addisu Z. Taddese", "addisuzt@intrinsic.ai"]}
